--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -48,10 +48,10 @@ set -g @catppuccin_window_middle_separator " █"
 set -g @catppuccin_window_number_position "right"
 
 set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_default_text " #W"
 
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_current_text " #W"
 
 set -g @catppuccin_status_modules_right "directory session"
 set -g @catppuccin_status_left_separator  " "
@@ -64,4 +64,5 @@ set -g @catppuccin_directory_text "#{pane_current_path}"
 # tpm plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'swaroopch/tmux-pomodoro'
 run '~/.tmux/plugins/tpm/tpm'
