--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,7 +51,7 @@ set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_window_default_text " #W"
 
 set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text " #W"
+set -g @catppuccin_window_current_text "#[fg=magenta] #[fg=white]#W"
 
 set -g @catppuccin_status_modules_right "directory session"
 set -g @catppuccin_status_left_separator  " "
