--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,28 +41,27 @@ set-option -g focus-events on
 set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
-# catppuccin theme
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text " #W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#[fg=magenta] #[fg=white]#W"
-
-set -g @catppuccin_status_modules_right "directory session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
 # tpm plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'swaroopch/tmux-pomodoro'
 run '~/.tmux/plugins/tpm/tpm'
+
+# Message style.
+set -g message-style "fg=white,bg=#1e1e2e"
+set -g message-command-style "fg=white,bg=#1e1e2e"
+
+# Pane style.
+set -g pane-border-style "fg=black"
+set -g pane-active-border-style "fg=white"
+
+# Status style.
+set -g status-style "fg=white,bg=#1e1e2e"
+set -g status-left "#[fg=blue,bg=#1e1e2e]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#1e1e2e]  "
+set -g status-right "#[fg=colour8,bg=#1e1e2e] #S #[fg=green,bg=#1e1e2e] #[fg=black,bg=green]󱫋 #{session_attached}#[fg=green,bg=#1e1e2e]"
+set -g status-left-length 100
+set -g status-justify centre
+
+# Window style.
+set -g window-status-style "fg=colour8,bg=black"
+set -g window-status-format "#[fg=default,bg=#1e1e2e] #[fg=default,bg=#1e1e2e]#W"
+set -g window-status-separator "  "
+set -g window-status-current-format "#[fg=white,bg=#1e1e2e] #[fg=white,bg=#1e1e2e]#W"
