--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,22 +46,22 @@ set -g @plugin 'tmux-plugins/tpm'
 run '~/.tmux/plugins/tpm/tpm'
 
 # Message style.
-set -g message-style "fg=white,bg=#1e1e2e"
-set -g message-command-style "fg=white,bg=#1e1e2e"
+set -g message-style "fg=white,bg=#0D101B"
+set -g message-command-style "fg=white,bg=#0D101B"
 
 # Pane style.
 set -g pane-border-style "fg=black"
 set -g pane-active-border-style "fg=white"
 
 # Status style.
-set -g status-style "fg=white,bg=#1e1e2e"
-set -g status-left "#[fg=blue,bg=#1e1e2e]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#1e1e2e]  "
-set -g status-right "#[fg=colour8,bg=#1e1e2e] #S #[fg=green,bg=#1e1e2e] #[fg=black,bg=green]󱫋 #{session_attached}#[fg=green,bg=#1e1e2e]"
+set -g status-style "fg=white,bg=#0D101B"
+set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#0D101B]  "
+set -g status-right "#[fg=colour8,bg=#0D101B] #S #[fg=green,bg=#0D101B] #[fg=black,bg=green]󱫋 #{session_attached}#[fg=green,bg=#0D101B]"
 set -g status-left-length 100
 set -g status-justify centre
 
 # Window style.
 set -g window-status-style "fg=colour8,bg=black"
-set -g window-status-format "#[fg=default,bg=#1e1e2e] #[fg=default,bg=#1e1e2e]#W"
+set -g window-status-format "#[fg=default,bg=#0D101B] #[fg=default,bg=#0D101B]#W"
 set -g window-status-separator "  "
-set -g window-status-current-format "#[fg=white,bg=#1e1e2e] #[fg=white,bg=#1e1e2e]#W"
+set -g window-status-current-format "#[fg=cyan,bg=#0D101B] #[fg=white,bg=#0D101B]#W"
