set prefix to ctrl+space

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
+set-option -g prefix C-Space
+bind-key -n C-Space send-prefix
 
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
@@ -56,7 +56,7 @@ set -g pane-active-border-style "fg=white"
 # Status style.
 set -g status-style "fg=white,bg=#0D101B"
 set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#0D101B]  "
-set -g status-right "#[fg=colour8,bg=#0D101B] #S #[fg=green,bg=#0D101B] #[fg=black,bg=green]󱫋 #{session_attached}#[fg=green,bg=#0D101B]"
+set -g status-right "#[fg=white,bg=#0D101B] #S #[fg=green,bg=#0D101B] #[fg=black,bg=green]󱫋 #{session_attached}#[fg=green,bg=#0D101B]"
 set -g status-left-length 100
 set -g status-justify centre
 
@@ -64,4 +64,4 @@ set -g status-justify centre
 set -g window-status-style "fg=colour8,bg=black"
 set -g window-status-format "#[fg=default,bg=#0D101B] #[fg=default,bg=#0D101B]#W"
 set -g window-status-separator "  "
-set -g window-status-current-format "#[fg=cyan,bg=#0D101B] #[fg=white,bg=#0D101B]#W"
+set -g window-status-current-format "#[fg=cyan,bg=#0D101B] #[fg=gray,bg=#0D101B]#W"
