--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,10 +1,10 @@
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-Space
-bind-key -n C-Space send-prefix
+set-option -g prefix C-a
+bind-key -n C-a send-prefix
 
 # split panes using | and -
-bind | split-window -h -c "#{pane_current_path}"
+bind / split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 unbind '"'
@@ -14,16 +14,16 @@ unbind %
 bind r source-file ~/.tmux.conf
 
 # switch panes using hjkl
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
 
 # Resize pane using hjkl
-bind -r h resize-pane -L 5
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # Enable mouse control
 set -g mouse on
