tmux bar to top

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -58,10 +58,11 @@ set -g status-style "fg=white,bg=#0D101B"
 set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#0D101B]  "
 set -g status-right "#[fg=white,bg=#0D101B] #S #[fg=green,bg=#0D101B] #[fg=black,bg=green]󱫋 #{session_attached}#[fg=green,bg=#0D101B]"
 set -g status-left-length 100
-set -g status-justify centre
+set -g status-justify left
+set-option -g status-position top
 
 # Window style.
 set -g window-status-style "fg=colour8,bg=black"
-set -g window-status-format "#[fg=default,bg=#0D101B] #[fg=default,bg=#0D101B]#W"
+set -g window-status-format "#[fg=default,bg=#0D101B] #[fg=#444444,bg=#0D101B]#W"
 set -g window-status-separator "  "
 set -g window-status-current-format "#[fg=cyan,bg=#0D101B] #[fg=gray,bg=#0D101B]#W"
