--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,10 +41,6 @@ set-option -g focus-events on
 set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
-# tpm plugins
-set -g @plugin 'tmux-plugins/tpm'
-run '~/.tmux/plugins/tpm/tpm'
-
 # Message style.
 set -g message-style "fg=white,bg=#0D101B"
 set -g message-command-style "fg=white,bg=#0D101B"
@@ -66,3 +62,8 @@ set -g window-status-style "fg=colour8,bg=black"
 set -g window-status-format "#[fg=default,bg=#0D101B] #[fg=#444444,bg=#0D101B]#W"
 set -g window-status-separator "  "
 set -g window-status-current-format "#[fg=cyan,bg=#0D101B] #[fg=gray,bg=#0D101B]#W"
+
+# tpm plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+run '~/.tmux/plugins/tpm/tpm'
