added time to statusbar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,7 +52,7 @@ set -g pane-active-border-style "fg=white"
 # Status style.
 set -g status-style "fg=white,bg=#0D101B"
 set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#0D101B]  "
-set -g status-right "#[fg=white,bg=#0D101B] #S #[fg=green,bg=#0D101B] #[fg=black,bg=green]󱫋 #{session_attached}#[fg=green,bg=#0D101B] "
+set -g status-right "#[fg=white,bg=#0D101B] #S #[fg=green,bg=#0D101B] #[fg=black,bg=green]%H:%M#[fg=green,bg=#0D101B] "
 set -g status-left-length 100
 set -g status-justify left
 set-option -g status-position top
