--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,7 +59,7 @@ set-option -g status-position top
 
 # Window style.
 set -g window-status-style "fg=colour8,bg=black"
-set -g window-status-format "#[fg=default,bg=#0D101B] #[fg=#444444,bg=#0D101B]#W"
+set -g window-status-format "#[fg=#444444,bg=#0D101B] #[fg=white,bg=#0D101B]#W"
 set -g window-status-separator "  "
 set -g window-status-current-format "#[fg=cyan,bg=#0D101B] #[fg=gray,bg=#0D101B]#W"
 
