changed top bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,8 +51,9 @@ set -g pane-active-border-style "fg=white"
 
 # Status style.
 set -g status-style "fg=white,bg=#0D101B"
-set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#0D101B]  "
-set -g status-right "#[fg=white,bg=#0D101B] #S #[fg=green,bg=#0D101B] #[fg=black,bg=green]%H:%M#[fg=green,bg=#0D101B] "
+# set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#0D101B]  "
+set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue]#S#[fg=blue,bg=#0D101B]  "
+set -g status-right "#[fg=white,bg=#0D101B] #{session_windows} #[fg=green,bg=#0D101B] #[fg=black,bg=green]%H:%M#[fg=green,bg=#0D101B] "
 set -g status-left-length 100
 set -g status-justify left
 set-option -g status-position top
@@ -67,3 +68,6 @@ set -g window-status-current-format "#[fg=cyan,bg=#0D101B] #[fg=gray,bg=#0D10
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 run '~/.tmux/plugins/tpm/tpm'
+
+# scripts
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
