--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -147,6 +147,8 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3blocks
+        wheel_up_cmd nop
+        wheel_down_cmd nop
 }
 
 # The same as default_border none
