--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -18,6 +18,9 @@ exec --no-startup-id nm-applet
 # bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 # set $refresh_i3blocks killall -SIGUSR1 i3blocks
 
+# Media player controls
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
+
 bindsym XF86AudioRaiseVolume exec --no-startup-id ~/.config/i3/scripts/volume_control.sh raise
 bindsym XF86AudioLowerVolume exec --no-startup-id ~/.config/i3/scripts/volume_control.sh lower
 bindsym XF86AudioMute exec --no-startup-id ~/.config/i3/scripts/volume_control.sh mute
@@ -158,4 +161,4 @@ default_border pixel 0
 exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
 
 # mouse speed 
-exec --no-startup-id ~/.config/i3/scripts/mouse_speed.sh
+exec_always --no-startup-id ~/.config/i3/scripts/mouse_speed.sh
