--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -162,3 +162,9 @@ exec_always --no-startup-id picom --config ~/.config/picom/picom.conf
 
 # mouse speed 
 exec_always --no-startup-id ~/.config/i3/scripts/mouse_speed.sh
+
+# set audio output
+exec --no-startup-id pactl set-default-sink 54
+
+# set display res and refresh rate
+exec --no-startup-id xrandr --output DP-2 --mode 2560x1440 --rate 75
