--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -175,3 +175,5 @@ exec --no-startup-id setxkbmap -option caps:escape
 # key repeat speed
 exec --no-startup-id xset r rate 300 40
 
+## 4k scaling
+exec xrdb ~/.Xresources
