--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -1,4 +1,4 @@
-set $mod Mod1
+set $mod Mod4
 
 font pango:JetBrainsMonoNerdFontMono 12
 
@@ -167,7 +167,7 @@ exec_always --no-startup-id ~/.config/i3/scripts/mouse_speed.sh
 exec_always --no-startup-id sh -c "pactl set-default-sink $(pactl list short sinks | grep analog | awk '{print $1}')"
 
 # set display res and refresh rate
-exec --no-startup-id xrandr --output DP-2 --mode 2560x1440 --rate 75
+exec --no-startup-id xrandr --output DP-4 --mode 3840x2160
 
 # caps to esc
 exec --no-startup-id setxkbmap -option caps:escape
@@ -177,3 +177,7 @@ exec --no-startup-id xset r rate 300 40
 
 ## 4k scaling
 exec xrdb ~/.Xresources
+
+# Turn off monitor after 10 min
+exec --no-startup-id xset dpms 600
+
