--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -179,5 +179,5 @@ exec --no-startup-id xset r rate 300 40
 exec xrdb ~/.Xresources
 
 # Turn off monitor after 10 min
-exec --no-startup-id xset dpms 600
+exec --no-startup-id xset dpms 600 600 600
 
