--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,10 +1,9 @@
 # disable blank lines
 add_newline = false
 
-# [kubernetes]
-# format = 'on [⛵ ($user on )($cluster in )$context \($namespace\)](dimmed green) '
-# disabled = false
-# contexts = [
-#   { context_pattern = "dev.local.cluster.k8s", style = "green", symbol = "💔 " },
-# ]
-#
+[kubernetes]
+format = 'on [⛵ ($cluster)](purple)[\($namespace\)](dimmed green) '
+disabled = false
+contexts = [
+  { context_pattern = "dev.local.cluster.k8s", style = "green", symbol = "💔 " },
+]
