chore: update tmux conf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -38,7 +38,7 @@ set -g renumber-windows on
 # lazyvim
 set-option -sg escape-time 10
 set-option -g focus-events on
-set-option -sa terminal-features ',xterm-256color:RGB'
+# set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 # Message style.
@@ -50,10 +50,12 @@ set -g pane-border-style "fg=black"
 set -g pane-active-border-style "fg=white"
 
 # Status style.
+set -g status-interval 1
 set -g status-style "fg=white,bg=#0D101B"
-# set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue] #{session_windows}#[fg=blue,bg=#0D101B]  "
 set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue]#S#[fg=blue,bg=#0D101B]  "
-set -g status-right "#[fg=white,bg=#0D101B]  #{session_windows} #[fg=green,bg=#0D101B] #[fg=black,bg=green]%H:%M#[fg=green,bg=#0D101B] "
+set -g status-right "#[fg=white,bg=#0D101B]  #{session_windows} #[fg=yellow,bg=#0D101B]#[fg=black,bg=yellow] #{cpu_percentage}#[fg=yellow,bg=#0D101B] #[fg=green,bg=#0D101B]#[fg=black,bg=green]%H:%M#[fg=green,bg=#0D101B] "
+# in .tmux.conf
+# set -g status-right '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 set -g status-left-length 100
 set -g status-justify left
 set-option -g status-position top
@@ -64,10 +66,14 @@ set -g window-status-format "#[fg=#444444,bg=#0D101B] #[fg=white,bg=#0D101B]#
 set -g window-status-separator "  "
 set -g window-status-current-format "#[fg=cyan,bg=#0D101B] #[fg=gray,bg=#0D101B]#W"
 
+# scripts
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
+
 # tpm plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
 run '~/.tmux/plugins/tpm/tpm'
 
-# scripts
-bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
