feat: add keybinding for swapping panes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,9 @@ bind c new-window -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# Custom keybinding to swap the top and bottom panes
+bind m swap-pane -D
+
 # reload config 
 bind r source-file ~/.tmux.conf
 
