--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,7 +56,7 @@ set -g pane-active-border-style "fg=white"
 set -g status-interval 1
 set -g status-style "fg=white,bg=#0D101B"
 set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue]#S#[fg=blue,bg=#0D101B]  "
-set -g status-right "#[fg=white,bg=#0D101B]  #{session_windows} #[fg=yellow,bg=#0D101B]#[fg=black,bg=yellow] #{cpu_percentage}#[fg=yellow,bg=#0D101B] #[fg=green,bg=#0D101B]#[fg=black,bg=green]%H:%M#[fg=green,bg=#0D101B] "
+set -g status-right "#[fg=white,bg=#0D101B]  #{session_windows} #[fg=#9DC7C8,bg=#0D101B]#[fg=black,bg=#9DC7C8] #{cpu_percentage}#[fg=#9DC7C8,bg=#0D101B] #[fg=green,bg=#0D101B]#[fg=black,bg=green]%H:%M#[fg=green,bg=#0D101B] "
 # in .tmux.conf
 # set -g status-right '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
 set -g status-left-length 100
