--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,11 +16,17 @@ bind m swap-pane -D
 # reload config 
 bind r source-file ~/.tmux.conf
 
-# switch panes using hjkl
-bind h select-pane -L
-bind l select-pane -R
-bind k select-pane -U
-bind j select-pane -D
+# switch panes using ctrl + hjkl
+# bind h select-pane -L
+# bind l select-pane -R
+# bind k select-pane -U
+# bind j select-pane -D
+
+# switch panes using alt + hjkl
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
 # Resize pane using hjkl
 bind -r H resize-pane -L 5
@@ -29,7 +35,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # Enable mouse control
-set -g mouse on
+set -g mouse off
 
 # Start counting pane and window number at 1
 set -g base-index 1
