--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,7 +35,7 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # Enable mouse control
-set -g mouse off
+set -g mouse on
 
 # Start counting pane and window number at 1
 set -g base-index 1
