tmux: plugin update

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,8 +10,11 @@ bind c new-window -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# kill session
+bind X kill-session
+
 # Custom keybinding to swap the top and bottom panes
-bind m swap-pane -D
+#bind m swap-pane -D
 
 # reload config 
 bind r source-file ~/.tmux.conf
@@ -48,6 +51,7 @@ set -g renumber-windows on
 set-option -sg escape-time 10
 set-option -g focus-events on
 # set-option -sa terminal-features ',xterm-256color:RGB'
+set-option -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 
 # Message style.
@@ -82,6 +86,7 @@ bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'thewtex/tmux-mem-cpu-load'
 # set -g @plugin 'thewtex/tmux-mem-cpu-load'
 run '~/.tmux/plugins/tpm/tpm'
