--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -66,8 +66,7 @@ set -g pane-active-border-style "fg=white"
 set -g status-interval 1
 set -g status-style "fg=white,bg=#0D101B"
 set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue]#S#[fg=blue,bg=#0D101B]  "
-set -g status-right "#[fg=#e3d5ca,bg=#0D101B]#[fg=black,bg=#e3d5ca] #(free -h | awk '/Mem:/ {print $3 \"/\" $2}')#[fg=#e3d5ca,bg=#0D101B] #[fg=#9DC7C8,bg=#0D101B]#[fg=black,bg=#9DC7C8] #{cpu_percentage}#[fg=#9DC7C8,bg=#0D101B] #[fg=green,bg=#0D101B]#[fg=black,bg=green]%H:%M#[fg=green,bg=#0D101B] "
-# set -g status-right '#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
+set -g status-right "#[fg=#e3d5ca,bg=#0D101B]#[fg=black,bg=#e3d5ca] #(free -h | awk '/Mem:/ {print $3 \"/\" $2}')#[fg=#e3d5ca,bg=#0D101B] #[fg=#9DC7C8,bg=#0D101B]#[fg=black,bg=#9DC7C8] #{cpu_percentage}#[fg=#9DC7C8,bg=#0D101B] #[fg=#8d99ae,bg=#0D101B]#[fg=black,bg=#8d99ae]%H:%M#[fg=#8d99ae,bg=#0D101B] "
 set -g status-left-length 100
 set -g status-justify left
 set-option -g status-position top
