tmux: update pod error icon

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -67,7 +67,7 @@ set -g status-interval 1
 set -g status-style "fg=white,bg=#0D101B"
 set -g status-left "#[fg=blue,bg=#0D101B]#[fg=black,bg=blue]#S#[fg=blue,bg=#0D101B]  "
 set -g status-right-length 100
-set -g status-right "#[fg=#d7e3fc,bg=#0D101B]#[fg=black,bg=#d7e3fc] #(kubectl get pods --all-namespaces --no-headers | grep -vE 'Running|Completed' | wc -l )#[fg=#d7e3fc,bg=#0D101B] #[fg=#e3d5ca,bg=#0D101B]#[fg=black,bg=#e3d5ca] #(free -h | awk '/Mem:/ {print $3 \"/\" $2}')#[fg=#e3d5ca,bg=#0D101B] #[fg=#9DC7C8,bg=#0D101B]#[fg=black,bg=#9DC7C8] #{cpu_percentage}#[fg=#9DC7C8,bg=#0D101B] #[fg=#8d99ae,bg=#0D101B]#[fg=black,bg=#8d99ae] %H:%M#[fg=#8d99ae,bg=#0D101B] "
+set -g status-right "#[fg=#d7e3fc,bg=#0D101B]#[fg=black,bg=#d7e3fc]󰋔 #(kubectl get pods --all-namespaces --no-headers | grep -vE 'Running|Completed' | wc -l )#[fg=#d7e3fc,bg=#0D101B] #[fg=#e3d5ca,bg=#0D101B]#[fg=black,bg=#e3d5ca] #(free -h | awk '/Mem:/ {print $3 \"/\" $2}')#[fg=#e3d5ca,bg=#0D101B] #[fg=#9DC7C8,bg=#0D101B]#[fg=black,bg=#9DC7C8] #{cpu_percentage}#[fg=#9DC7C8,bg=#0D101B] #[fg=#8d99ae,bg=#0D101B]#[fg=black,bg=#8d99ae] %H:%M#[fg=#8d99ae,bg=#0D101B] "
 set -g status-left-length 100
 set -g status-justify left
 set-option -g status-position top
