--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -1,9 +1,18 @@
-# disable blank lines
-add_newline = false
-
 [kubernetes]
-format = 'on [⛵ ($cluster)](purple)[\($namespace\)](dimmed green) '
+format = 'on [🐋 $context \($namespace\)](white) '
 disabled = false
 contexts = [
-  { context_pattern = "dev.local.cluster.k8s", style = "green", symbol = "💔 " },
+  { context_pattern = "dev.local.cluster.k8s", style = "white", symbol = "💔 " },
 ]
+
+[username]
+style_user = 'purple'
+style_root = 'red'
+format = '[$user]($style) '
+disabled = false
+show_always = true
+
+[hostname]
+ssh_only = false
+detect_env_vars = ['!TMUX', 'SSH_CONNECTION']
+disabled = false
