--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -5,3 +5,6 @@ title = ""
 window-decoration = false
 
 keybind = ctrl+shift+k=reload_config
+
+confirm-close-surface = false
+mouse-hide-while-typing = true
