tmux: swap panes with prefix

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,16 +20,16 @@ bind X kill-session
 bind r source-file ~/.tmux.conf
 
 # switch panes using ctrl + hjkl
-# bind h select-pane -L
-# bind l select-pane -R
-# bind k select-pane -U
-# bind j select-pane -D
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
 
-# switch panes using alt + hjkl
-bind -n M-h select-pane -L
-bind -n M-l select-pane -R
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
+# # switch panes using alt + hjkl
+# bind -n M-h select-pane -L
+# bind -n M-l select-pane -R
+# bind -n M-k select-pane -U
+# bind -n M-j select-pane -D
 
 # Resize pane using hjkl
 bind -r H resize-pane -L 5
