hypr: caps to escape

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -56,12 +56,13 @@ $menu = wofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-
-# toolkit-specific scale
-env = GDK_SCALE,2
-env = XCURSOR_SIZE,24
+# env = XCURSOR_THEME,Adwaita
+#
+# env = XCURSOR_SIZE,20
+# env = HYPRCURSOR_SIZE,20
+#
+# # toolkit-specific scale
+# env = GDK_SCALE,1
 
 
 #####################
@@ -183,12 +184,12 @@ input {
     kb_layout = de
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = caps:escape
     kb_rules =
 
     follow_mouse = 1
 
-    sensitivity = -0.6 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = -0.7 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
@@ -229,8 +230,9 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, F, fullscreen, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
