--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -56,12 +56,12 @@ $menu = wofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-# env = XCURSOR_THEME,Adwaita
-#
-# env = XCURSOR_SIZE,20
+env = XCURSOR_THEME,Adwaita
+
+env = XCURSOR_SIZE,24
 # env = HYPRCURSOR_SIZE,20
-#
-# # toolkit-specific scale
+
+# toolkit-specific scale
 # env = GDK_SCALE,1
 
 
@@ -230,7 +230,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, D, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, F, fullscreen, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
