--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -8,3 +8,35 @@ keybind = ctrl+shift+k=reload_config
 
 confirm-close-surface = false
 mouse-hide-while-typing = true
+
+## Color Scheme: Gooey (Converted to Ghosty Syntax)
+#
+## Palette
+#palette = 0=#51576d
+#palette = 1=#e78284
+#palette = 2=#a6d189
+#palette = 3=#e5c890
+#palette = 4=#8caaee
+#palette = 5=#f4b8e4
+#palette = 6=#81c8be
+#palette = 7=#a5adce
+#palette = 8=#626880
+#palette = 9=#e67172
+#palette = 10=#8ec772
+#palette = 11=#d9ba73
+#palette = 12=#7b9ef0
+#palette = 13=#f2a4db
+#palette = 14=#5abfb5
+#palette = 15=#b5bfe2
+#
+## Background and foreground colors
+#background = #0D101B
+#foreground = #c6d0f5
+#
+## Cursor settings
+#cursor-color = #fff
+#cursor-text = #000
+#
+## Selection background and foreground colors
+#selection-background = #626880
+#selection-foreground = #c6d0f5
