hypr: update workspaces

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -323,17 +323,19 @@ xwayland {
 ### Launch at startup ###
 #########################
 
+windowrulev2 = workspace 10, class:^(steam)$
+
 exec = hyprpaper &
-# exec-once = hyprctl dispatch workspace 1; firefox &
 exec-once = [workspace 1 silent] ghostty
-exec-once = [workspace 2 silent] firefox
-exec-once = [workspace 10 silent] spotify
+exec-once = [workspace 2 silent] zen-browser
+exec-once = [workspace 3 silent] firefox
+exec-once = [workspace 5 silent] spotify
+exec-once = [workspace 10 silent] steam
 
 ######################
 ### KDE Dark Theme ###
 ######################
 
-# exec = gsettings set org.gnome.desktop.interface gtk-theme "YOUR_DARK_GTK3_THEME"   # for GTK3 apps
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
