--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -145,6 +145,18 @@ animations {
     animation = workspaces, 1, 1.94, almostLinear, fade
     animation = workspacesIn, 1, 1.21, almostLinear, fade
     animation = workspacesOut, 1, 1.94, almostLinear, fade
+  #     enabled = true
+  # bezier = overshot, 0.05, 0.9, 0.1, 1.05
+  # bezier = smoothOut, 0.36, 0, 0.66, -0.56
+  # bezier = smoothIn, 0.25, 1, 0.5, 1
+  #
+  # animation = windows, 1, 5, overshot, slide
+  # animation = windowsOut, 1, 4, smoothOut, slide
+  # animation = windowsMove, 1, 4, default
+  # animation = border, 1, 10, default
+  # animation = fade, 1, 10, smoothIn
+  # animation = fadeDim, 1, 10, smoothIn
+  # animation = workspaces, 1, 6, default
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -326,11 +338,11 @@ xwayland {
 windowrulev2 = workspace 10, class:^(steam)$
 
 exec = hyprpaper &
-exec-once = [workspace 1 silent] ghostty
-exec-once = [workspace 2 silent] zen-browser
-exec-once = [workspace 3 silent] firefox
+exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 5 silent] spotify
+exec-once = [workspace 2 silent] ghostty
 exec-once = [workspace 10 silent] steam
+# exec-once = [workspace 2 silent] zen-browser
 
 ######################
 ### KDE Dark Theme ###
