--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -335,12 +335,17 @@ xwayland {
 ### Launch at startup ###
 #########################
 
-windowrulev2 = workspace 10, class:^(steam)$
+windowrulev2 = workspace 9 silent, class:^(vesktop)$
+windowrulev2 = workspace 10 silent, class:^(steam)$
+
+misc{
+   focus_on_activate = false
+}
 
 exec = hyprpaper &
 exec-once = [workspace 1 silent] firefox
-exec-once = [workspace 5 silent] spotify
 exec-once = [workspace 2 silent] ghostty
+exec-once = [workspace 4 silent] spotify
 exec-once = [workspace 10 silent] steam
 # exec-once = [workspace 2 silent] zen-browser
 
@@ -349,5 +354,11 @@ exec-once = [workspace 10 silent] steam
 ######################
 
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
-
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
+
+################################
+### Display Power Management ###
+################################
+
+# exec = swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+
