hyrp: enable waybar

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -342,7 +342,7 @@ misc{
    focus_on_activate = false
 }
 
-exec = hyprpaper &
+exec-once = hyprpaper & waybar &
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
 exec-once = [workspace 4 silent] spotify
