hypr: update config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -47,7 +47,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & hyprpaper &
 
 
 #############################
@@ -184,6 +184,7 @@ master {
 misc {
     force_default_wallpaper = 1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    middle_click_paste = false # disable middle mouse paste
 }
 
 
@@ -229,12 +230,14 @@ device {
 # $mainMod = SUPER # Sets "Windows" key as main modifier
 $mainMod = ALT # Sets "Windows" key as main modifier
 
+# Screenshot a region
+bind = SHIFT+ALT, S, exec, hyprshot -m region --clipboard-only
+
 # Media Keys
 # Add custom keybinding for next song with Ctrl + Alt + Right Arrow
 bind = MOD+CTRL+ALT, RIGHT, exec, playerctl next
 bind = MOD+CTRL+ALT, LEFT, exec, playerctl previous
 bind = MOD+CTRL+ALT, SPACE, exec, playerctl play-pause
-
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
@@ -278,8 +281,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -290,7 +293,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ --limit 1.0
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
@@ -342,7 +345,6 @@ misc{
    focus_on_activate = false
 }
 
-exec-once = hyprpaper & waybar &
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
 exec-once = [workspace 4 silent] spotify
