--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -47,7 +47,7 @@ $menu = wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper &
+exec = waybar & hyprpaper &
 
 
 #############################
@@ -338,7 +338,7 @@ xwayland {
 ### Launch at startup ###
 #########################
 
-windowrulev2 = workspace 9 silent, class:^(vesktop)$
+windowrulev2 = workspace 9 silent, class:^(discord)$
 windowrulev2 = workspace 10 silent, class:^(steam)$
 
 misc{
