--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -349,5 +349,4 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 ### Display Power Management ###
 ################################
 
-# exec = swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
-
+exec-once = swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
