hypr: update config

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -325,9 +325,6 @@ xwayland {
 ### Launch at startup ###
 #########################
 
-windowrulev2 = workspace 9 silent, class:^(discord)$
-windowrulev2 = workspace 10 silent, class:^(steam)$
-
 misc{
    focus_on_activate = false
 }
@@ -336,7 +333,13 @@ exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
 exec-once = [workspace 4 silent] spotify
 exec-once = [workspace 10 silent] steam
-# exec-once = [workspace 2 silent] zen-browser
+
+######################
+#### Window Rules ####
+######################
+
+windowrulev2 = workspace 9 silent, class:^(vesktop)$
+windowrulev2 = workspace 10 silent, class:^(steam)$
 
 ######################
 ### KDE Dark Theme ###
