hypr: add discord to window 9

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -339,6 +339,7 @@ exec-once = [workspace 10 silent] steam
 ######################
 
 windowrulev2 = workspace 9 silent, class:^(vesktop)$
+windowrulev2 = workspace 9 silent, class:^(discord)$
 windowrulev2 = workspace 10 silent, class:^(steam)$
 
 ######################
