--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -338,8 +338,8 @@ exec-once = [workspace 10 silent] steam
 #### Window Rules ####
 ######################
 
-windowrulev2 = workspace 9 silent, class:^(vesktop)$
 windowrulev2 = workspace 1 silent, class:^(firefox)$
+windowrulev2 = workspace 4 silent, class:^(Spotify)$
 windowrulev2 = workspace 9 silent, class:^(discord)$
 windowrulev2 = workspace 10 silent, class:^(steam)$
 
