--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -214,8 +214,8 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-# $mainMod = SUPER # Sets "Windows" key as main modifier
-$mainMod = ALT # Sets "Windows" key as main modifier
+$mainMod = Windows # Sets "Windows" key as main modifier
+# $mainMod = ALT # Sets "Windows" key as main modifier
 
 # Screenshot a region
 bind = SHIFT+ALT, S, exec, hyprshot -m region --clipboard-only
@@ -332,6 +332,7 @@ misc{
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
 exec-once = [workspace 4 silent] spotify
+exec-once = [workspace 9 silent] discord
 exec-once = [workspace 10 silent] steam
 
 ######################
