tmux: move current pane to left or right

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,10 @@ bind c new-window -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+# Move current pane left/right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
 # kill session
 bind X kill-session
 
