--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -331,6 +331,7 @@ misc{
 
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
+exec-once = [workspace 3 silent] info.beyondallreason.bar
 exec-once = [workspace 4 silent] spotify
 exec-once = [workspace 9 silent] discord
 exec-once = [workspace 10 silent] steam
@@ -340,6 +341,7 @@ exec-once = [workspace 10 silent] steam
 ######################
 
 windowrulev2 = workspace 1 silent, class:^(firefox)$
+windowrulev2 = workspace 3 silent, class:^(info.beyondallreason.bar)$
 windowrulev2 = workspace 4 silent, class:^(Spotify)$
 windowrulev2 = workspace 9 silent, class:^(discord)$
 windowrulev2 = workspace 10 silent, class:^(steam)$
