ghostty: update font

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,5 +1,5 @@
 background = "#0D101B"
-font-family = "JetBrainsMono Nerd Font"
+font-family = "JetBrainsMono NL Nerd Font Mono"
 font-size = 12
 title = ""
 window-decoration = false
