--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -174,6 +174,9 @@ misc {
     middle_click_paste = false # disable middle mouse paste
 }
 
+ecosystem {
+    no_update_news = true
+}
 
 #############
 ### INPUT ###
