hypr: set alt to mod key

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -215,8 +215,8 @@ device {
 ###################
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = Windows # Sets "Windows" key as main modifier
-# $mainMod = ALT # Sets "Windows" key as main modifier
+# $mainMod = Windows # Sets "Windows" key as main modifier
+$mainMod = ALT # Sets "Windows" key as main modifier
 
 # Screenshot a region
 bind = SHIFT+ALT, S, exec, hyprshot -m region --clipboard-only
