--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ exec-once = waybar & hyprpaper &
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
 env = XCURSOR_THEME,Adwaita
-
+env = GDK_SCALE,2
 env = XCURSOR_SIZE,24
 # env = HYPRCURSOR_SIZE,20
 
@@ -198,9 +198,9 @@ input {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
+# gestures {
+#     workspace_swipe = false
+# }
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -356,4 +356,10 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 ### Display Power Management ###
 ################################
 
-exec-once = swayidle -w timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+exec-once = swayidle -w timeout 3600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+
+###########################
+### notification daemon ###
+###########################
+
+exec-once = mako
