hypr: add calibre to worksapce 3 and minor updates

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -332,15 +332,18 @@ misc{
 
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
+exec-once = [workspace 3 silent] ebook-viewer ~/Documents/cka.epub
 exec-once = [workspace 4 silent] spotify
 exec-once = [workspace 9 silent] discord
 exec-once = [workspace 10 silent] steam
+
 
 ######################
 #### Window Rules ####
 ######################
 
 windowrulev2 = workspace 1 silent, class:^(firefox)$
+windowrulev2 = workspace 3 silent, class:^(calibre-ebook-viewer)$
 windowrulev2 = workspace 4 silent, class:^(Spotify)$
 windowrulev2 = workspace 9 silent, class:^(discord)$
 windowrulev2 = workspace 10 silent, class:^(steam)$
@@ -356,7 +359,7 @@ env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 ### Display Power Management ###
 ################################
 
-exec-once = swayidle -w timeout 3600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+exec-once = swayidle -w timeout 1200 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 ###########################
 ### notification daemon ###
