--- a/waybar/.config/waybar/hosts/common.jsonc
+++ b/waybar/.config/waybar/hosts/common.jsonc
@@ -1,35 +1,40 @@
 {
   "layer": "top",
   "position": "top",
-  "height": 42,
+  "height": 14,
   "modules-left": ["hyprland/workspaces"],
   "modules-center": ["custom/media"],
-  "modules-right": ["cpu", "memory", "battery", "pulseaudio", "network", "clock#date", "clock#time"],
 
   "hyprland/workspaces": {
     "format": "{icon}",
     "on-click": "hyprctl dispatch workspace {name}",
     "all-outputs": true
   },
+
   "window": {
     "max-length": 50
   },
+
   "clock#date": {
     "interval": 20,
     "format": "{:%e %b %Y}",
     "tooltip": false
   },
+
   "clock#time": {
     "interval": 10,
     "format": "{:%H:%M}",
     "tooltip": false
   },
+
   "clock": {
     "format": "{:%d.%m.%Y %H:%M}"
   },
+
   "cpu": {
     "format": "CPU: {usage}%"
   },
+
   "memory": {
     "format": "RAM: {}%"
   },
@@ -41,24 +46,13 @@
     "on-scroll-up": "pamixer -i 5",
     "on-scroll-down": "pamixer -d 5"
   },
+
   "custom/media": {
-    "exec": "playerctl metadata --format '{{artist}} - {{title}}' || echo ''",
-    "return-type": "text",
+    "exec": "playerctl metadata --format '{\"text\": \"{{artist}} - {{title}}\"}' || echo '{\"text\": \"\", \"tooltip\": false}'",
+    "return-type": "json",
     "interval": 1,
-    "markup": false,          // ← THIS disables GTK markup parsing
     "on-click": "playerctl play-pause",
     "on-scroll-up": "playerctl next",
     "on-scroll-down": "playerctl previous"
-  },
-
-  "network": {
-  "interface": "wlan0",
-  "interval": 30,
-  "format-wifi": "{signalStrength}% ",
-  "format-disconnected": "Offline",
-  "tooltip-format-wifi": "{essid} — {ipaddr} ({signalStrength}%)",
-  "tooltip-format-disconnected": "Not connected",
-  "max-length": 40
-  },
-
+  }
 }
