--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/mnt/Pictures/wallhaven-1.png
-wallpaper = , /home/mnt/Pictures/wallhaven-1.png
+preload = /home/mnt/Downloads/5.png
+wallpaper = , /home/mnt/Downloads/5.png
