--- a/waybar/.config/waybar/hosts/desktop.jsonc
+++ b/waybar/.config/waybar/hosts/desktop.jsonc
@@ -1,9 +1,9 @@
 {
-  "modules-right": ["cpu", "memory", "pulseaudio", "clock#date", "clock#time"],
+  "modules-right": ["cpu", "memory", "pulseaudio", "network", "clock#date", "clock#time"],
 
   "network": {
-    "format-wifi": " {essid} ({signalStrength}%)",
-    "format-ethernet": " {ipaddr}/{cidr}",
-    "format-disconnected": "Disconnected"
+    "format-wifi": "󰖩 {essid} ({signalStrength}%)",
+    "format-ethernet": "󰈀 {ipaddr}/{cidr}",
+    "format-disconnected": "󰖪 Disconnected"
   }
 }
