feat: add 90° rotation

--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -20,6 +20,12 @@ input {
     }
 }
 
+# Rotate touchscreen 90 degrees
+device {
+    name = elan900c:00-04f3:2830
+    transform = 1
+}
+
 ###################
 ### KEYBINDINGS ###
 ###################
@@ -27,10 +33,13 @@ input {
 # hyprlock
 bind = ALT, L, exec, hyprlock
 
+# Toggle screen rotation
+bind = , F9, exec, ~/.config/hypr/toggle-rotation.sh
+
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ --limit 1.0
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ --limit 1.0 && ~/.config/hypr/volume-notify.sh
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && ~/.config/hypr/volume-notify.sh
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && ~/.config/hypr/volume-notify.sh
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
