feat: make desktop adjustments

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -189,6 +189,11 @@ $mainMod = ALT # Sets "Windows" key as main modifier
 bind = SHIFT+ALT, S, exec, hyprshot -m region --clipboard-only
 
 # Media Keys
+bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ --limit 1.0 && ~/.config/hypr/volume-notify.sh
+bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && ~/.config/hypr/volume-notify.sh
+bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && ~/.config/hypr/volume-notify.sh
+bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+
 # Add custom keybinding for next song with Ctrl + Alt + Right Arrow
 bind = MOD+CTRL+ALT, RIGHT, exec, playerctl next
 bind = MOD+CTRL+ALT, LEFT, exec, playerctl previous
@@ -313,3 +318,9 @@ windowrulev2 = workspace 10 silent, class:^(steam)$
 
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
+
+################################
+### Display Power Management ###
+################################
+
+exec-once = swayidle -w timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
