--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -12,6 +12,12 @@ monitor = eDP-1, 1920x1080@60, 0x0, 1.25, transform,0
 #############
 
 input {
+    kb_layout = de
+    kb_variant =
+    kb_model =
+    kb_options = caps:escape
+    kb_rules =
+    follow_mouse = 1
     sensitivity = -0.22
 
     touchpad {
@@ -36,11 +42,7 @@ bind = ALT, L, exec, hyprlock
 # Toggle screen rotation
 bind = , F9, exec, ~/.config/hypr/toggle-rotation.sh
 
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ --limit 1.0 && ~/.config/hypr/volume-notify.sh
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && ~/.config/hypr/volume-notify.sh
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && ~/.config/hypr/volume-notify.sh
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+# Laptop multimedia keys for LCD brightness
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
@@ -51,8 +53,3 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 bindl = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bindl = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
 
-################################
-### Display Power Management ###
-################################
-
-exec-once = swayidle -w timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
