--- a/waybar/.config/waybar/hosts/desktop.jsonc
+++ b/waybar/.config/waybar/hosts/desktop.jsonc
@@ -1,5 +1,5 @@
 {
-  "modules-right": ["cpu", "memory", "pulseaudio", "network", "clock#date", "clock#time"],
+  "modules-right": ["cpu", "memory", "pulseaudio", "clock#date", "clock#time"],
 
   "network": {
     "format-wifi": "󰖩 {essid} ({signalStrength}%)",
