--- a/hypr/.config/hypr/hosts/desktop.conf
+++ b/hypr/.config/hypr/hosts/desktop.conf
@@ -1,11 +1,22 @@
 # Desktop-specific configuration
 
 # Monitor configuration
-# monitor = DP-1, 2560x1440@144, 0x0, 1
+monitor = , highres, auto, 2
 
-# Mouse configuration
-# input {
-#     sensitivity = 0.0
-# }
+input {
+    kb_layout = de
+    kb_options = caps:escape
 
-# Desktop-specific keybinds or settings
+    follow_mouse = 1
+
+    sensitivity = -0.8 # -1.0 - 1.0, 0 means no modification.
+
+    touchpad {
+        natural_scroll = false
+    }
+}
+
+device {
+    name = epic-mouse-v1
+    sensitivity = -0.5
+}
