feat: add tmux keybindings

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,6 +14,12 @@ unbind %
 bind-key -n C-S-Left swap-window -t -1 \; select-window -t -1
 bind-key -n C-S-Right swap-window -t +1 \; select-window -t +1
 
+# Rotate panes
+bind-key -n M-r rotate-window
+
+# Cycle layouts forward
+bind-key -n M-n next-layout
+
 # kill session
 bind X kill-session
 
