--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -7,6 +7,8 @@ window-decoration = false
 keybind = ctrl+shift+k=reload_config
 keybind = ctrl+shift+left=unbind
 keybind = ctrl+shift+right=unbind
+keybind = alt+p=unbind
+keybind = ctrl+enter=unbind
 
 confirm-close-surface = false
 mouse-hide-while-typing = true
