--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -37,7 +37,7 @@ device {
 ###################
 
 # hyprlock
-bind = ALT, L, exec, hyprlock
+bind = ALT, L, exec, playerctl pause && hyprlock
 
 # Toggle screen rotation
 bind = , F9, exec, ~/.config/hypr/toggle-rotation.sh
