--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ systemd/.config/systemd/user/pipewire.service.wants/
 nvim/.config/lazy-lock.json
 nvim/.config/nvim/lazy-lock.json
 hypr/.config/hypr/host.conf
+waybar/.config/waybar/config.jsonc
