feat: fix display idle

--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -46,10 +46,8 @@ bind = , F9, exec, ~/.config/hypr/toggle-rotation.sh
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
-##################
-### Brightness ###
-##################
-
+# Brightness
 bindl = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
 bindl = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
 
+exec-once = swayidle -w timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
