--- a/hypr/.config/hypr/hosts/desktop.conf
+++ b/hypr/.config/hypr/hosts/desktop.conf
@@ -20,3 +20,5 @@ device {
     name = epic-mouse-v1
     sensitivity = -0.5
 }
+
+exec-once = swayidle -w timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
