feat: add brightness notification

--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -43,11 +43,7 @@ bind = ALT, L, exec, playerctl pause && hyprlock
 bind = , F9, exec, ~/.config/hypr/toggle-rotation.sh
 
 # Laptop multimedia keys for LCD brightness
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
-
-# Brightness
-bindl = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-bindl = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
+bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+ && ~/.config/hypr/brightness-notify.sh
+bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%- && ~/.config/hypr/brightness-notify.sh
 
 exec-once = swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
