--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -297,7 +297,7 @@ misc{
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
 exec-once = [workspace 3 silent] ebook-viewer ~/Documents/cka.epub
-exec-once = [workspace 4 silent] spotify
+exec-once = [workspace 4 silent] flatpak run com.spotify.Client 2>/dev/null
 exec-once = [workspace 9 silent] discord
 exec-once = [workspace 10 silent] steam
 
