feat: add chromium

--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -7,6 +7,11 @@
 monitor = HDMI-A-1, 3840x2160@60, 0x-1080, 2
 monitor = eDP-1, 1920x1080@60, 0x0, 1.25, transform,0
 
+
+# Startup
+exec = [workspace 5 silent] chromium --restore-last-session
+windowrulev2 = workspace 5 silent, class:^(chromium)$
+
 #############
 ### INPUT ###
 #############
