feat: add hypridle

--- a/hypr/.config/hypr/hosts/desktop.conf
+++ b/hypr/.config/hypr/hosts/desktop.conf
@@ -21,4 +21,4 @@ device {
     sensitivity = -0.5
 }
 
-exec-once = swayidle -w timeout 600 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+exec-once = hypridle
