--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -51,4 +51,4 @@ bind = , F9, exec, ~/.config/hypr/toggle-rotation.sh
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+ && ~/.config/hypr/brightness-notify.sh
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%- && ~/.config/hypr/brightness-notify.sh
 
-exec-once = swayidle -w timeout 300 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
+exec-once = hypridle
