feat: add night light

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -319,3 +319,4 @@ windowrulev2 = workspace 10 silent, class:^(steam)$
 exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
+exec-once = wlsunset -l 51.51 -L 7.5 -t 6000
