--- a/hypr/.config/hypr/hosts/laptop.conf
+++ b/hypr/.config/hypr/hosts/laptop.conf
@@ -9,7 +9,7 @@ monitor = eDP-1, 1920x1080@60, 0x0, 1.25, transform,0
 
 
 # Startup
-exec = [workspace 5 silent] chromium --restore-last-session
+exec-once = [workspace 5 silent] chromium --restore-last-session
 windowrulev2 = workspace 5 silent, class:^(chromium)$
 
 #############
@@ -31,10 +31,9 @@ input {
     }
 }
 
-# Rotate touchscreen 90 degrees
 device {
     name = elan900c:00-04f3:2830
-    transform = 1
+    transform = 0
 }
 
 ###################
