tmux: add vim motions

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,8 +26,18 @@ bind X kill-session
 # Custom keybinding to swap the top and bottom panes
 #bind m swap-pane -D
 
-# reload config 
+# reload config
 bind r source-file ~/.tmux.conf
+
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Enter copy mode with Ctrl-Shift-x
+bind-key -n C-S-x copy-mode
+
+# Vim-style copy/paste
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 # switch panes using ctrl + hjkl
 bind h select-pane -L
