--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -18,7 +18,7 @@ $menu = pkill wofi || wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper &
+exec-once = waybar & hyprpaper & dunst &
 
 
 #############################
@@ -296,7 +296,7 @@ misc{
 
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] ghostty
-exec = [workspace 3 silent] godot --rendering-driver opengl3
+# exec-once = [workspace 3 silent] godot --rendering-driver opengl3
 exec-once = [workspace 4 silent] flatpak run com.spotify.Client 2>/dev/null
 exec-once = [workspace 6 silent] ebook-viewer ~/Documents/cka.epub
 exec-once = [workspace 9 silent] discord
@@ -308,14 +308,11 @@ exec-once = [workspace 10 silent] steam
 ######################
 
 windowrulev2 = workspace 1 silent, class:^(firefox)$
-windowrulev2 = workspace 3 silent, class:^(godot)$
+# windowrulev2 = workspace 3 silent, class:^(godot)$
 windowrulev2 = workspace 4 silent, class:^(Spotify)$
 windowrulev2 = workspace 6 silent, class:^(calibre-ebook-viewer)$
 windowrulev2 = workspace 9 silent, class:^(discord)$
 windowrulev2 = workspace 10 silent, class:^(steam)$
-# -- Godot settings
-windowrulev2 = immediate, class:^(Godot)$
-windowrulev2 = noanim, class:^(Godot)$
 
 ######################
 ### KDE Dark Theme ###
