--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -34,6 +34,17 @@ label {
     valign = center
 }
 
+label {
+    monitor =
+    text = cmd[update:5000] echo " $(cat /sys/class/power_supply/BAT*/capacity)%"
+    color = rgba(255, 255, 255, 1.0)
+    font_size = 14
+    font_family = JetBrainsMono Nerd Font
+    position = 0, -200
+    halign = center
+    valign = center
+}
+
 input-field {
     monitor =
     size = 300, 50
