hypr: add wallpaper cycle

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -18,7 +18,8 @@ $menu = pkill wofi || wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & dunst &
+exec-once = waybar & hyprpaper &
+exec-once = ~/.config/hypr/restore-wallpaper.sh
 
 
 #############################
@@ -188,6 +189,9 @@ $mainMod = ALT # Sets "Windows" key as main modifier
 # Screenshot a region
 bind = SHIFT+ALT, S, exec, hyprshot -m region --clipboard-only
 
+# Cycle through wallpapers
+bind = SUPER+ALT, SPACE, exec, ~/.config/hypr/cycle-wallpaper.sh
+
 # Media Keys
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+ --limit 1.0 && ~/.config/hypr/volume-notify.sh
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && ~/.config/hypr/volume-notify.sh
@@ -215,6 +219,12 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# Move/swap windows with mainMod + SHIFT + hjkl
+bind = $mainMod SHIFT, h, movewindow, l
+bind = $mainMod SHIFT, l, movewindow, r
+bind = $mainMod SHIFT, k, movewindow, u
+bind = $mainMod SHIFT, j, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
