hypr: add dunst

--- a/hypr/.config/hypr/hosts/common.conf
+++ b/hypr/.config/hypr/hosts/common.conf
@@ -18,7 +18,7 @@ $menu = pkill wofi || wofi --show drun
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper &
+exec-once = waybar & hyprpaper & dunst &
 exec-once = ~/.config/hypr/restore-wallpaper.sh
 
 
